// Vitest Snapshot v1

exports[`Cascader > :props > :clearable 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input__wrap t-select-input t-cascader"
  >
    <div
      class="t-input t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        <!---->
        <!---->
        
      </div>
      <input
        class="t-input__inner"
        placeholder="请选择"
        readonly=""
        type="text"
        unselectable="on"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          disabled="false"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`Cascader > :props > :disabled 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input__wrap t-select-input t-cascader"
  >
    <div
      class="t-input t-is-disabled t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        <!---->
        <!---->
        
      </div>
      <input
        class="t-input__inner"
        disabled=""
        placeholder="请选择"
        readonly=""
        type="text"
        unselectable="on"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon t-is-disabled"
          disabled="true"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`Cascader > :props > :value 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input__wrap t-select-input t-cascader"
  >
    <div
      class="t-input t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        <!---->
        <!---->
        
      </div>
      <input
        class="t-input__inner"
        placeholder="请选择"
        readonly=""
        type="text"
        unselectable="on"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          disabled="false"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;
